[gd_scene load_steps=15 format=2]

[ext_resource path="res://Raccoon.gd" type="Script" id=1]
[ext_resource path="res://Sprites/RacoonSheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/MiscSheet.png" type="Texture" id=3]
[ext_resource path="res://Sound/AttackHitSound.wav" type="AudioStream" id=4]
[ext_resource path="res://Unused/DeathSplosion.tres" type="Material" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 6, 7, 5, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Attack/AttackHitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_process"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("../AttackSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.25, 0.4 )
}
tracks/5/type = "method"
tracks/5/path = NodePath("../AttackCooldown")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "Dash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13, 11 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 12 )

[sub_resource type="Animation" id=8]
resource_name = "New Anim"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:velo_y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1.86607, 1 ),
"update": 0,
"values": [ 0.0, 225.0 ]
}

[sub_resource type="CanvasItemMaterial" id=11]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = true

[node name="Raccoon" type="KinematicBody2D"]
z_index = 1
collision_mask = 4240
collision/safe_margin = 0.1
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
health_start = 3

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2
vframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/Attack = SubResource( 1 )
anims/Dash = SubResource( 10 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/Move = SubResource( 4 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 5 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.9

[node name="Attack" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="AttackHitbox" type="CollisionShape2D" parent="Attack"]
position = Vector2( 10, -3 )
shape = SubResource( 6 )
disabled = true

[node name="PickupDetection" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4160

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupDetection"]
position = Vector2( 0, 5 )
shape = SubResource( 5 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 8 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 11 )
emitting = false
amount = 30
lifetime = 0.5
one_shot = true
speed_scale = 1.1
explosiveness = 0.2
process_material = ExtResource( 5 )
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="HurtCooldown" type="Timer" parent="."]
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.972
pitch_scale = 1.41

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Attack" to="." method="_on_Attack_area_entered"]
[connection signal="area_entered" from="PickupDetection" to="." method="_on_PickupDetection_area_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
